# BiCOMC

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTORS  LICENSE  NOTICE.md  README.md  appveyor.yml
.circleci/: config.yml
cmake/: config.cmake.in  uninstall.cmake
example/: CMakeLists.txt
example/multiple_inherit/: CMakeLists.txt  library.cpp  main.cpp  multiple.h
example/operator_example/: CMakeLists.txt  Callable.h  library.cpp  main.cpp  operator_example.sln
example/operator_example/operator_example/: main.cpp  operator_example.vcxproj
example/simple_example/: CMakeLists.txt  Simple.h  dl_helper.cpp  library.cpp  main.cpp  simple_example.sln
example/simple_example/simple_example/: main.cpp  simple_example.vcxproj
include/bicomc/: array.h  error_code.h  memory.h  object.h  stdint.h  tuple.h  type_traits.h
include/bicomc/detail/: atomic.h  compatibility.h  config.h  error_code.h  error_detail.h  error_fwd.h  hash.h  library.h  method_call.h  method_return.h  method_traits.h  object.h  object_fwd.h  object_helper.h  pstdint.h  safe_static.h  safe_static_mutex.h  signature.h  string_util.h
include/bicomc/detail/compiler/: bicomc_call.h  clang.h  clang_atomic.h  compiler.h  gcc.h  gcc_atomic.h  intel.h  intel_atomic.h  msvc.h  msvc_atomic.h  naive_atomic.h
include/bicomc/test/: test.h
